[project]
name = "lark-helper"
version = "0.1.0.dev1"
description = "lark helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.4.19",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
